--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<header>
 							<h2>Democratized Deep Learning A.I.</h2>
 							<p>Disruptive Artificial Intelligence<br />
-							on the a Decentralized Blockchain.</p>
+							on a Decentralized Blockchain.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
