add medium link

--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
+						
+						<li><a href="https://www.medium.com/intuitionmachine" class="icon alt fa-medium"><span class="label">Twitter</span></a></li>
 						<li><a href="https://twitter.com/IntuitMachine" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/groups/deeplearningpatterns" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/groups/8584076" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
