--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 						<li><a href="https://www.facebook.com/groups/deeplearningpatterns" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/groups/8584076" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/IntuitionFabricOrg" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://www.linkedin.com/groups/8584076" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="email:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
