--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 							<h2>Magna faucibus lorem diam</h2>
 							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
 						</header>
-						<form method="post" action="#" class="container 50%">
+						<form method="post" action="https://formspree.io/info@intuitionmachine.com" class="container 50%">
 							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
+								<div class="8u 12u$(xsmall)"><input type="email" name="_replyto" id="email" placeholder="Your Email Address" /></div>
+								<div class="4u$ 12u$(xsmall)"><input type="submit" value="I want in!" class="fit special" /></div>
 							</div>
 						</form>
 					</div>
