--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Do you want to join the revolution?</h2>
+							<p>Submit your email to get started on the road to freedom.</p>
 						</header>
 						<form method="post" action="https://formspree.io/info@intuitionmachine.com" class="container 50%">
 							<div class="row uniform 50%">
