--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Democratized Deep Learning A.I.</h2>
-							<p>Disruptive Artificial Intelligence<br />
-							on the Decentralized Ethereum Blockchain.</p>
+							<h2>Intuition Fabric™</h2>
+							<p>Democratized Deep Learning Artificial Intelligence on the Decentralized Ethereum Blockchain.</p>
 						</header>
 						<span class="image"><img src="images/head-shot.jpg" alt="" /></span>
 					</div>
