--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 					<div class="content">
 						<header>
 							<h2>Intuition Fabric™</h2>
-							<p>Democratized Deep Learning Artificial Intelligence on the Decentralized Ethereum Blockchain.</p>
+							<p>Democratized Deep Learning Artificial Intelligence</p>
+							<p> on the Decentralized Ethereum Blockchain.</p>
 						</header>
 						<span class="image"><img src="images/head-shot.jpg" alt="" /></span>
 					</div>
