--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Intuition Fabric<small>™</small></a></h1>
+					<h1 id="logo"><a href="index.html">Intuition Fabric<small>&trade;</small></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -50,7 +50,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Intuition Fabric<small>™</small></h2>
+							<h2>Intuition Fabric<small>&trade;</small></h2>
 							<p>Democratized Deep Learning Artificial Intelligence</p>
 							<p> on the Decentralized Ethereum Blockchain.</p>
 						</header>
