--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Intuition Fabric<small>&trade;</small></h2>
+							<h2>Intuition Fabric<supp>&trade;</supp></h2>
 							<p>Democratized Deep Learning Artificial Intelligence</p>
 							<p> on the Decentralized Ethereum Blockchain.</p>
 						</header>
