--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<div class="content">
 						<header>
 							<h2>Open, Decentralized and Secure</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<p>A learning platform that amplifies the capabilities of its users.</p>
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
@@ -112,8 +112,8 @@
 					<span class="image fit main bottom"><img src="images/fingerprint.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Cutting Edge Technology Stack</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Deep Learning and Blockchain</h2>
+							<p>Decentralized super-human narrow intelligence on a global network infrastructure.</p>
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
