--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Robust and Resilient</h3>
+									<h3>Future Proof</h3>
 									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
