--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
+							<h2>Artificial Intelligence for the Marginalized 99%</h2>
 							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
 						</header>
 						<div class="box alt">
@@ -140,33 +140,33 @@
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
 									<h3>Learning Marketplace</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>A unique marketplace where networking effects enhances both human and artificial intelligence.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
 									<h3>Unbreakable</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Based on Peer to Peer (P2P) that prevents our AI rights from being taken away.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
 									<h3>Future Proof</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Continually updated to take advantage of the latest developments in Deep Learning.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-file"></span>
 									<h3>Reputation</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Be compensated for your efforts in improving the shared marketplace.</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-lock"></span>
 									<h3>Privacy</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Ensure your privacy by shielding your data from monopolists.</p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">Read the Whitepaper</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -176,8 +176,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Do you want to join the revolution?</h2>
-							<p>Submit your email to get started on the road to freedom.</p>
+							<h2>Join the Deep Learning Revolution!</h2>
+							<p>Submit your email to begin your road to freedom.</p>
 						</header>
 						<form method="post" action="https://formspree.io/info@intuitionmachine.com" class="container 50%">
 							<div class="row uniform 50%">
