--- a/index.html
+++ b/index.html
@@ -68,22 +68,14 @@
 								<div class="4u 12u$(medium)">
 									<header>
 										<h2>Monopolization of AI Leads to More Inequality</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<p>Automation and the relentless drive towards greater efficiencies leads to destruction of work.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>A few giant technology companies are cornering the market for Deep Learning AI talent and resources.</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>Deep Learning is an extremely promising and disruptive technology that is increasingly being monopolized by the very few. </p>
 								</div>
 							</div>
 						</div>
@@ -128,7 +120,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Artificial Intelligence for the Marginalized 99%</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<p>We are the 99%. </p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
