update relentless drive for automation

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<div class="4u 12u$(medium)">
 									<header>
 										<h2>Monopolization of AI Leads to More Inequality</h2>
-										<p>Automation and the relentless drive towards greater efficiencies leads to destruction of work.</p>
+										<p>Automation and our society's relentless drive towards increasing efficiencies is leading to destruction of our work and means of livelihood.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
