--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>A few giant technology companies are cornering the market for Deep Learning AI talent and resources.</p>
+									<p>Deep Learning is an extremely promising and disruptive technology that is increasingly being monopolized by the very few.
+										These giant technology companies are cornering the market for talent and resources.</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Deep Learning is an extremely promising and disruptive technology that is increasingly being monopolized by the very few. </p>
+									<p> </p>
 								</div>
 							</div>
 						</div>
@@ -121,6 +122,11 @@
 						<header class="major">
 							<h2>Artificial Intelligence for the Marginalized 99%</h2>
 							<p>We are the 99%. </p>
+							<quote>Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years.
+								— Mark Cuban
+							</quote>
+
+
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
