p instead of quote

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 						<header class="major">
 							<h2>Artificial Intelligence for the Marginalized 99%</h2>
 							<p>We are the 99%. </p>
-							<quote>Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years.
+							<p>Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years.
 								— Mark Cuban
-							</quote>
+							</p>
 
 
 						</header>
