--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Monopolization of AI Leads to More Inequality</h2>
-										<p>Automation and our society's relentless drive towards increasing efficiencies is leading to destruction of our work and means of livelihood.</p>
+										<h2>Monopolization of AI Leads to Greater Economic Inequality</h2>
+										<p>Automation and our society's relentless drive towards increasing efficiencies is leading to the destruction of our work and our means of livelihood.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
 									<p>Deep Learning is an extremely promising and disruptive technology that is increasingly being monopolized by the very few.
 										These giant technology companies are cornering the market for talent and resources.</p>
+									<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people" according to Ray Kurzweil.</p>	
 								</div>
 								<div class="4u$ 12u$(medium)">
 									<p> </p>
@@ -122,7 +123,7 @@
 						<header class="major">
 							<h2>Artificial Intelligence for the Marginalized 99%</h2>
 							<p>We are the 99%. </p>
-							<p>Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years.
+							<p>"Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
 								— Mark Cuban
 							</p>
 
