--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Deep Learning is an extremely promising and disruptive technology that is increasingly being monopolized by the very few.
-										These giant technology companies are cornering the market for talent and resources.</p>
+									<p>Deep Learning is an extremely promising and disruptive AI technology that is increasingly being monopolized by the very few.
+										Giant technology companies are cornering the market for talent, resources and eventually future economic rewards.</p>
 									<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people" according to Ray Kurzweil.</p>	
 								</div>
 								<div class="4u$ 12u$(medium)">
@@ -90,10 +90,10 @@
 					<span class="image fit main"><img src="images/person-detect.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Open, Decentralized and Secure</h2>
-							<p>A learning platform that amplifies the capabilities of its users.</p>
+							<h2>Open and Decentralized Fabric</h2>
+							<p>Intuition Fabric (iFab) is a learning marketplace that amplifies the intelligence of its participants.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p></p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
