--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (iFab) is a Product of Intuition Machine Inc.<li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
