--- a/index.html
+++ b/index.html
@@ -134,32 +134,40 @@
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-area-chart"></span>
 									<h3>Decentralized</h3>
-									<p>The Internet has been one of the great equalizers in human history and a real accelerator of innovation. But the increasing consolidation of control is a threat to that.</p>
+									<p>The Internet has lead to the democratization of knowledge and an accelerator of innovation. 
+										Unfortunately, it is increasing under threat of monopolization.  
+										iFab purpose goes a step further by introducing a framework for the democratization of AI.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
 									<h3>Learning Marketplace</h3>
-									<p>A unique marketplace where networking effects enhances both human and artificial intelligence.</p>
+									<p>A unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
 									<h3>Unbreakable</h3>
-									<p>Based on Peer to Peer (P2P) that prevents our AI rights from being taken away.</p>
+									<p>Based on Peer to Peer (P2P) that prevents our AI rights from being taken away.  
+										iFab provides resilient access to data, that works with low latency or poor connectivity.
+									</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
 									<h3>Future Proof</h3>
-									<p>Continually updated to take advantage of the latest developments in Deep Learning.</p>
+									<p>Deep Learning research is growing exponentially and the breakthroughs are increasing.  
+										We keep abreast of the cutting edge developments and will leverage in the latest discoveries in Deep Learning.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-file"></span>
 									<h3>Reputation</h3>
-									<p>Be compensated for your efforts in improving the shared marketplace.</p>
+									<p>Participants are compensated for their contributions through a blockchain secured reputation system.  
+										iFab is based on an "Architecture of Participation" that ensures frictionless participation and contribution 
+										to the marketplace.
+									</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-lock"></span>
 									<h3>Privacy</h3>
-									<p>Ensure your privacy by shielding your data from monopolists.</p>
+									<p>Decentralized and open AI ensure our privacy by shielding our personal data from monopolists.</p>
 								</section>
 							</div>
 						</div>
