--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
 									<h3>Learning Marketplace</h3>
-									<p>A unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
+									<p>iFab is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
 									<h3>Unbreakable</h3>
 									<p>Based on Peer to Peer (P2P) that prevents our AI rights from being taken away.  
-										iFab provides resilient access to data, that works with low latency or poor connectivity.
+										iFab provides resilient access to AI, that works even with low latency or poor connectivity.
 									</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
 									<h3>Future Proof</h3>
-									<p>Deep Learning research is growing exponentially and the breakthroughs are increasing.  
-										We keep abreast of the cutting edge developments and will leverage in the latest discoveries in Deep Learning.</p>
+									<p>Deep Learning research is growing exponentially and the breakthroughs are increasing at an astonishing rate.  
+										We keep abreast of the cutting edge developments and will integrate the most promising discoveries in Deep Learning.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-file"></span>
