move cuban quote

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 									<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people" according to Ray Kurzweil.</p>	
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p> </p>
+										<p>"Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
+											— Mark Cuban
+										</p>
 								</div>
 							</div>
 						</div>
@@ -123,9 +125,7 @@
 						<header class="major">
 							<h2>Artificial Intelligence for the Marginalized 99%</h2>
 							<p>We are the 99%. </p>
-							<p>"Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
-								— Mark Cuban
-							</p>
+						
 
 
 						</header>
@@ -184,7 +184,7 @@
 					<div class="container">
 						<header>
 							<h2>Join the Deep Learning Revolution!</h2>
-							<p>Submit your email to begin your road to freedom.</p>
+							<p>Submit your email to begin your road to AI privacy and freedom.</p>
 						</header>
 						<form method="post" action="https://formspree.io/info@intuitionmachine.com" class="container 50%">
 							<div class="row uniform 50%">
@@ -207,7 +207,7 @@
 						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (iFab) is a Product of Intuition Machine Inc.<li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (iFab) is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li><li>Disclaimers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
