--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">Read the Whitepaper</a></li>
+								<li><a href="https://gum.co/wxLP" class="button">Read the Whitepaper</a></li>
 							</ul>
 						</footer>
 					</div>
